@startuml
entity Combattant {
    id: int <<PK>>
    email: str
    motDePasse: str
    nom: str
    piece: int
    vie: int
    maxVie: int
    niveau: int
    experience: int
    inventairePotions: int
}

entity Arme {
    id: int <<PK>>
    nom: str
    valeurOr: int
    degat: int
    image: blob
}

entity Quete {
    id: int <<PK>>
    nom: str
    recompenseOr: int
    difficulte: int
    statut: str
    niveau: int
}

entity Donjon {
    id: int <<PK>>
    nom: str
    difficulte: int
    statut: str
    niveau: int
}

entity Monstre {
    id: int <<PK>>
    nom: str
    piece: int
    vie: int
    niveau: int
}

entity Forgeron {
    id: int <<PK>>
    nom: str
}

entity Medecin {
    id: int <<PK>>
    nom: str
    prixPotion: int
    stockPotions: int
}

Combattant "1" -- "0..*" Arme : possède
Combattant "1" -- "0..*" Quete : accepte
Combattant "1" -- "0..*" Donjon : explore
Donjon "1" -- "0..*" Monstre : contient
Monstre "1" -- "1" Arme : possède
Combattant "1" -- "1" Forgeron : a
Combattant "1" -- "1" Medecin : a
Quete "1" -- "0..*" Monstre : cible
Quete "1" -- "1" Donjon : associe
@enduml